tests/negative/neg_pr1113b_match_unknown_variant.safe
package neg_pr1113b_match_unknown_variant

   type shape is circle (radius : integer) or idle;

   function value returns integer

      current : shape = idle;
      match current
         when circle (radius)
            return radius
         when triangle (side)
            return side
         when idle
            return 0
